--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,88 @@
 html, body {
+    font-family: sans-serif;
     height: 100%;
     margin: 0;
+    overflow: hidden;
     padding: 0;
     width: 100%;
 }
 
-#map {
+#shadow {
     background-color: #000;
-    height: 100%;
+    height: calc(100% - 78px);
+    left: 0;
+    opacity: 0.7;
+    position: absolute;
+    top: 0;
+    transition: opacity .3s ease;
     width: 100%;
+    z-index: 2;
+}
+
+#map {
+    height: 100%;
+    transition: height .3s ease;
+    width: 100%;
+}
+
+.mapOpen #map {
+    height: calc(100% - 78px);
+}
+
+#table {
+    background: #fff;
+    bottom: -80px;
+    box-sizing: border-box;
+    position: absolute;
+    transition: bottom .3s ease;
+    width: 100%;
+}
+
+.mapOpen #table {
+    bottom: 0;
+}
+
+#loader {
+    background-color: #222;
+    height: 100%;
+    opacity: 1;
+    position: absolute;
+    transition: opacity .3s ease;
+    width: 100%;
+}
+
+.loaderHide #loader {
+    opacity: 0;
+}
+
+#loader .loader-inner {
+    margin-left: 50%;
+    margin-top: 40px;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: 1px solid #cbcbcb;
+    empty-cells: show;
+    width: 100%;
+}
+
+table thead {
+    background-color: #e0e0e0;
+    color: #000;
+    text-align: left;
+    vertical-align: bottom;
+}
+
+table th, table td {
+    padding: 10px 20px;
+}
+
+table th.num, table td.num {
+    text-align: right;
+}
+
+table td:first-child, table th:first-child {
+    border-left-width: 0;
 }
