--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,11 @@ html, body {
     width: 100%;
 }
 
+a {
+    color: #2196F3;
+    text-decoration: none;
+}
+
 #shadow {
     background-color: #000;
     height: calc(100% - 78px);
