--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,37 @@ a {
     text-decoration: none;
 }
 
+#frame-container {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: -100%;
+    transition: top .3s ease;
+    width: 100%;
+    z-index: 4000;
+}
+
+#frame {
+    height: 100%;
+    width: 100%;
+}
+
+#back {
+    background: #222;
+    border-radius: 50%;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-size: 40px;
+    height: 40px;
+    left: 10px;
+    line-height: 35px;
+    padding-left: 12px;
+    position: absolute;
+    top: 10px;
+    width: 40px;
+}
+
 #shadow {
     background-color: #000;
     height: calc(100% - 100px);
